--- a/to-dolist.html
+++ b/to-dolist.html
@@ -2,88 +2,137 @@
 <html>
 <head>
   <title>Furniture Workshop Dashboard</title>
-  <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js">
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- ================= HEADER ================= -->
+  <header class="dashboard-header">
+    <h1><i class="bi bi-house-door"></i> Furniture Workshop Dashboard</h1>
+  </header>
+
+  <!-- ================= SIDEBAR ================= -->
   <div class="sidebar">
-    <h2 id="demo" style="color:rgb(15, 2, 0); text-align: center; font-family: serif; font-weight:bolder">Furniture Workshop</h2>
-
-    <button onclick="showSection('dashboard')">Dashboard</button>
-    <button onclick="showSection('orders')">Orders</button>
-    <button onclick="showSection('inventory')">Inventory</button>
-    <button onclick="showSection('categories')">Task Categories</button>
-    <button onclick="showSection('settings')">Settings</button>
-    <button onclick="showSection('help')">Help</button>
-    <button class="logout-btn" onclick="logout()">Logout</button>
+      <h2 id="demo" style="color:rgb(15, 2, 0); text-align: center; font-family: serif; font-weight:bolder">
+        <i class="bi bi-tools"></i> Furniture Workshop
+      </h2>
+      <button onclick="showSection('dashboard')"><i class="bi bi-speedometer2"></i> Dashboard</button>
+      <button onclick="showSection('orders')"><i class="bi bi-bag"></i> Orders</button>
+      <button onclick="showSection('inventory')"><i class="bi bi-box-seam"></i> Inventory</button>
+      <!-- <button onclick="showSection('categories')"><i class="bi bi-grid"></i> Task Categories</button>
+      <button onclick="showSection('settings')"><i class="bi bi-gear"></i> Settings</button>
+      <button onclick="showSection('help')"><i class="bi bi-question-circle"></i> Help</button> -->
+      <button class="logout-btn" onclick="logout()"><i class="bi bi-box-arrow-right"></i> Logout</button>
   </div>
 
+  <!-- ================= MAIN ================= -->
   <div class="main">
-    <!-- Dashboard -->
+
+    <!-- ================= DASHBOARD ================= -->
     <div id="dashboard" class="section">
-      <h1>Welcome, Workshop Manager</h1>
-      <div class="dashboard-cards">
-        <div class="card">
-          <h2 id="totalOrders">0</h2>
-          <p>Total Orders</p>
-        </div>
-        <div class="card">
-          <h2 id="completedOrders">0</h2>
-          <p>Completed Orders</p>
-        </div>
-        <div class="card">
-          <h2 id="pendingOrders">0</h2>
-          <p>Pending Orders</p>
-        </div>
-      </div>
+        <h1>Welcome, Workshop Manager</h1>
 
-      <div class="tasks">
-        <div class="task-list">
-          <h3>To-Do Tasks</h3>
-          <ul id="taskList"></ul>
-          <input type="text" id="taskInput" placeholder="Add new task">
-          <button onclick="addTask()">Add</button>
-        </div>
+        <div class="dashboard-cards">
 
-        <div class="task-list">
-          <h3>Completed Tasks</h3>
-          <ul id="completedTaskList"></ul>
+            <!-- TASK CARDS -->
+            <div class="card">
+                <h2 id="tasksTotal"><i class="bi bi-list-check"></i> 0</h2>
+                <p>Total Tasks</p>
+            </div>
+            <div class="card">
+                <h2 id="tasksCompleted"><i class="bi bi-check-circle"></i> 0</h2>
+                <p>Completed Tasks</p>
+            </div>
+            <div class="card">
+                <h2 id="tasksPending"><i class="bi bi-clock"></i> 0</h2>
+                <p>Pending Tasks</p>
+            </div>
+
+            <!-- ORDER CARDS -->
+            <div class="card">
+                <h2 id="ordersTotal"><i class="bi bi-basket"></i> 0</h2>
+                <p>Total Orders</p>
+            </div>
+            <div class="card">
+                <h2 id="ordersCompleted"><i class="bi bi-check2-square"></i> 0</h2>
+                <p>Completed Orders</p>
+            </div>
+            <div class="card">
+                <h2 id="ordersPending"><i class="bi bi-hourglass-split"></i> 0</h2>
+                <p>Pending Orders</p>
+            </div>
+
+        </div> <!-- END dashboard-cards -->
+
+        <!-- ===== TASK LISTS ===== -->
+        <div class="tasks">
+            <div class="task-list">
+                <h3><i class="bi bi-list-task"></i> To-Do Tasks</h3>
+                <ul id="tasksList"></ul>
+                <input type="text" id="taskInput" placeholder="Add new task">
+                <button onclick="addTask()"><i class="bi bi-plus-circle"></i> Add</button>
+            </div>
+
+            <div class="task-list">
+                <h3><i class="bi bi-check2-square"></i> Completed Tasks</h3>
+                <ul id="completedTasksList"></ul>
+            </div>
         </div>
-      </div>
     </div>
 
-    <!-- Orders -->
+    <!-- ================= ORDERS ================= -->
     <div id="orders" class="section">
-      <h2>Orders</h2>
-      <p>List of orders and their status will be displayed here.</p>
+        <h2><i class="bi bi-bag"></i> Orders</h2>
+
+        <h3><i class="bi bi-plus-circle"></i> Add New Order</h3>
+        <div class="add-order-form">
+            <input type="text" id="orderInput" placeholder="Enter order name">
+            <input type="number" id="orderPrice" placeholder="Enter price" min="0" step="0.01">
+            <input type="number" id="orderQuantity" placeholder="Enter quantity" min="1" step="1">
+            <button onclick="addOrder()"><i class="bi bi-save"></i> Add Order</button>
+        </div>
+
+        <br>
+
+        <h4><i class="bi bi-clock"></i> Pending Orders</h4>
+        <ul id="ordersList"></ul>
+
+        <h4><i class="bi bi-check2-square"></i> Completed Orders</h4>
+        <ul id="completedOrdersList"></ul>
     </div>
 
-    <!-- Inventory -->
+    <!-- ================= INVENTORY ================= -->
     <div id="inventory" class="section">
-      <h2>Inventory</h2>
-      <p>Manage stock, materials, and furniture items here.</p>
+        <h2><i class="bi bi-box-seam"></i> Inventory</h2>
+        <p>Manage stock, materials, and furniture items here.</p>
+
+        <!-- Inventory Table -->
+        <table id="inventoryTable" class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th><i class="bi bi-card-text"></i> Item Name</th>
+                    <th><i class="bi bi-currency-dollar"></i> Price per Unit</th>
+                    <th><i class="bi bi-stack"></i> Quantity</th>
+                    <th><i class="bi bi-calculator"></i> Total Value</th>
+                    <th><i class="bi bi-tools"></i> Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Inventory items will appear here -->
+            </tbody>
+        </table>
     </div>
 
-    <!-- Task Categories -->
-    <div id="categories" class="section">
-      <h2>Task Categories</h2>
-      <p>Organize tasks by categories such as Production, Delivery, or Maintenance.</p>
-    </div>
+  </div> <!-- END MAIN -->
 
-    <!-- Settings -->
-    <div id="settings" class="section">
-      <h2>Settings</h2>
-      <p>Update account info, profile image, or app preferences here.</p>
-    </div>
+  <!-- ================= FOOTER ================= -->
+  <footer>
+    &copy; 2025 Furniture Workshop. All rights reserved.
+  </footer>
 
-    <!-- Help -->
-    <div id="help" class="section">
-      <h2>Help</h2>
-      <p>Support, guides, and frequently asked questions.</p>
-    </div>
-  </div>
   <script src="script.js"></script>
 </body>
 </html>
